@@ -1,3 +1,5 @@
+*.swp
+tags
 *.pyc
 *.egg-info
 .pypirc
@@ -5,3 +7,4 @@
 .idea/
 build/
 dist/
+*.vim
